Version 100, ??, 1998
Changed class syntax, splitting public clause use into:
  `public' : defines ivars not in superclass
  `override' : defines ivars already in superclass
Added ivar-in-interface?
Changed interface: raises an exception if a superinterface
   declares a variable that is also declared in the interface
   expression
Removed letrec*; letrec has the same semantics
Removed constant-name and constant-name-all-globals
Removed secure-primitive-exception-types
Removed readable type symbols (e.g., #<procedure>)
Removed semaphore-callback (MrEd now has queue-callback)
Fixed unfairness in threads (perpetually creating threads
 would starve certain threads, particularly the main thread)
Added current-memory-use
Asynchronous breaks are now disabled during dynamic-wind
 pre and post thunks
Removed user-break-poll-handler; spawn a thread that sleeps and
 calls break-thread instead
Removed dynamic-enable-break (no long needed since dynamic-wind
 post thunks can't be broken), but moved it to MzLib's thread.ss
Renamed call-with-escaping-continution procedure to
 call-with-escape-continution (call/ec unchanged)
Finalized with-continuation-mark and current-continuation-marks
 and documented them; the errortrace poor man's debugger relies
 on continuation marks; see plt/collects/errortrace/doc.txt
Added raise-mismatch-error
MacOS: getenv and putenv work within MzScheme; if a file named
 "Environment" resides in MzScheme's folder, it provides the
 initial environment; see the documentation for details
MacOS: fixed TCP problems
Changed handling of inexact can complex numbers towards compliance
 with Brad Lucier's proposal:
  (* 0 x) = 0 for all x
  (log 1) = 0, etc.
  -0.0 and 0.0 are properly distinguished; (- 0.0) = -0.0, and
   (/ (expt 2 400) -inf.0) = -0.0; (eqv? 0.0 -0.0) = #f even
   though (= 0.0 -0.0) = #t
  Complex numbers can have an inexact real/imaginary part with
   an exact zero imaginary/real part; thus, 4.0 is different